--- a/app/sql/sqlmesh/config.yaml
+++ b/app/sql/sqlmesh/config.yaml
@@ -5,7 +5,7 @@ gateways:
       # https://sqlmesh.readthedocs.io/en/stable/reference/configuration/#connections
       # https://sqlmesh.readthedocs.io/en/stable/integrations/engines/duckdb/#connection-options
       type: duckdb
-      database: .../database/nba.db
+      database: '/Users/dhite/Documents/GitHub/nba25/app/database/nba.db'
       # concurrent_tasks: 1
       # register_comments: True
       # pre_ping: False
