player models, line tables

--- a/app/sql/sqlmesh/models/external_models/raw_lines_table.yaml
+++ b/app/sql/sqlmesh/models/external_models/raw_lines_table.yaml
@@ -3,9 +3,10 @@
     - GAME_ID
     - TEAM_ABBREVIATION
   columns:
-    GAME_ID: BIGINT
-    GAME_DATE: TEXT
-    TEAM_ABBREVIATION: TEXT
-    LINE: DOUBLE
-    OU: DOUBLE
+    date: BIGINT
+    team: TEXT
+    site: TEXT
+    o:team: TEXT
+    line: DOUBLE
+    total: DOUBLE
   gateway: duckdb
